<resources>
    <string name="app_name">ShoppingList</string>
    <string name="no_acc_register_text">Nemate korisnički račun? <u>Registrirajte se!</u></string>
    <string name="login">Prijava</string>
    <string name="password">Lozinka</string>
    <string name="e_mail">E-mail</string>
    <string name="login_header">Prijavite se:</string>
    <string name="acc_go_login">Već imate račun? Prijavite se!</string>
    <string name="register_header">Registrirajte se:</string>
    <string name="repeat_password">Ponovite lozinku</string>
    <string name="register">Registracija</string>
    <string name="title_activity_shopping_list">ShoppingList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="save">Spremi</string>
    <string name="product_name">Naziv porizvoda</string>
    <string name="quantity">Količina</string>
    <string name="category">Kategorija</string>
    <string name="choose_product_category">Odaberite kategoriju proizvoda</string>
    <string name="new_product">Novi proizvod</string>
    <string name="product_list">Popis proizvoda</string>
</resources>
